--- a/style.css
+++ b/style.css
@@ -146,6 +146,7 @@ p {
     font-size: 4vh;
 }
 
+/* Shapes */
 .vl {
     border-left: 2px solid;
     border-color: var(--accent);
@@ -161,7 +162,59 @@ p {
     background: var(--accent);
 }
 
+.rectangle {
+    height: 30vh;
+    width: 25vh;
+    background:var(--text);
+    border: 10vh solid;
+    border-color: var(--text);
+    position: static;
+    margin-top: 30%;
+    margin-left: -4%;
+}
+.curve {
+    height: 25vh;
+    width: 25vh;
+    border: 10vh solid;
+    border-color: var(--text);
+    border-radius: 25%;
+    background:var(--text);
+    position: static;
+    margin-top: -60%;
+    margin-left: -4%;
+}
 
+.l {
+    margin-left: 33%;
+}
+.t {
+    margin-top: -12%;
+}
+.l2 {
+    margin-left: 70%;
+}
+.t2 {
+    margin-top: -12%;
+}
+
+.l3 {
+    margin-left: 25.5% !important;
+}
+.l4 {
+    margin-left: 52.5% !important;
+}
+
+.curve_line {
+    height: 74vh;
+    width: 40vh;
+    border: 0.3vh solid;
+    border-top-left-radius: 10vh;
+    border-top-right-radius: 10vh;
+    border-color: var(--accent);
+    position: absolute;
+    margin-top: -24%;
+    margin-left: -1.7%;
+}
 /* Settings for images */
 .github{
     background: url("assets/github\ regular\ \(Pixel\ perfect\).png") no-repeat;
@@ -233,9 +286,10 @@ p {
     height: 105vh;
     margin-top: -3%;
     margin-left: 71%;
-    animation: fadein 3s;
+    animation: fadein 1.5s;
 }
 
+/* Nav Bar Classes */
 .navi {
     color: var(--accent);
     position: fixed;
@@ -257,7 +311,6 @@ p {
 .remove {
     display:inline-flex;
 }
-
 .home {
     top: 52vh;
 }
@@ -277,6 +330,7 @@ p {
     top: 82vh;
 }
 
+/* Section Classes */
 .title {
     background: var(--main);
     position: static;
@@ -287,7 +341,7 @@ p {
     border: 10vh solid;
     border-color: var(--main);
     text-align: right;
-    animation: fadein 3s;
+    animation: fadein 1.5s;
 }
 
 .sect {
@@ -297,20 +351,69 @@ p {
     border-color: var(--main);
     width: 132vh;
     height: 70vh;
-    margin-top: 4.5%;
+    margin-top: -8.5%;
     margin-left: 15%;
 }
 
 .tech {
-    margin-top: -8%;
-    height: auto;
+    height: 110vh;
+}
+.skill_title {
+    color:var(--accent);
+    font-family: 'Abril Fatface', cursive;
+    font-size: 4.5vh;
+    font-weight: 100;
+    text-align: center;
+    margin-top: -29%;
+    margin-left: -73.5%;
+}
+.skill_sub {
+    color: var(--text);
+    max-width: 15vh;
+    font-size: 2.5vh;
+    margin-top: 5%;
+    margin-left: 7.5%;
+    text-align: center;
+    line-height: 5vh;
+    background: var(--accent);
+    border: 0.3vh solid;
+    border-radius: 1vh;
 }
 
+/* Miscellaneous */
 .moveup {
     margin-top: -3%;
 }
+.moveup2 {
+    margin-top:-8%;
+}
+.moveup3 {
+    margin-top: -45%;
+}
+.moveup4 {
+    margin-top: -49%;
+}
 .movedown {
     margin-top: 10%;
+}
+.movedown2 {
+    margin-top: 4.8%;
+}
+.moveleft {
+    margin-left: 0%;
+}
+.moveleft2 {
+    margin-left: 44%;
+}
+.moveleft3 {
+    margin-left: 74%;
+}
+.moveleft4 {
+    margin-left: 81%;
+}
+.larger_width {
+    max-width: 20vh;
+    margin-left: 42%;
 }
 .large {
     margin-top: 5%;
