--- a/style.css
+++ b/style.css
@@ -423,7 +423,7 @@ ul {
 .experiences {
     top: 82vh;
 }
-.resume {
+.cv {
     top: 88vh;
 }
 
@@ -466,7 +466,7 @@ ul {
 .skill_sub {
     color: var(--text);
     max-width: 15vh;
-    font-size: 2.5vh;
+    font-size: 2vh;
     margin-top: 5%;
     margin-left: 7.5%;
     text-align: center;
@@ -495,6 +495,7 @@ ul {
     margin-top: -1%;
     color:var(--accent);
 }
+
 .edu {
     background: var(--text);
     border-color: var(--text);
@@ -506,7 +507,6 @@ ul {
     margin-left: -5%;
     margin-top: 5%
 }
-
 .edu_line {
     border-top-left-radius: 5vh;
     border-bottom-left-radius: 5vh;
@@ -518,7 +518,31 @@ ul {
     margin-top: -15.5%
 }
 
+.exp {
+    background: var(--text);
+    border-color: var(--text);
+    border-top-left-radius: 5vh;
+    border-bottom-left-radius: 5vh;
+    border: 1vh solid;
+    width: 146.6vh;
+    height: 20vh;
+    margin-left: -5%;
+    margin-top: 5%
+}
+.exp_line {
+    border-top-left-radius: 5vh;
+    border-bottom-left-radius: 5vh;
+    border-color: var(--accent) !important;
+    border: 0.3vh solid;
+    width: 145vh;
+    height: 18vh;
+    margin-left: -3.8%;
+    margin-top: -15.5%
+}
+
 /* Miscellaneous */
+/* Note for future websites: Avoid defining misc. spacing classes as it 
+   gets messy very fast */
 .moveup {
     margin-top: -3%;
 }
@@ -529,13 +553,16 @@ ul {
     margin-top: -45%;
 }
 .moveup4 {
-    margin-top: -49%;
+    margin-top: -45%;
 }
 .moveup5 {
-    margin-top: -25%;
+    margin-top: -24%;
 }
 .moveup6 {
-    margin-top:-44.2%
+    margin-top:-42.7%
+}
+.moveup7 {
+    margin-top: -46.5%;
 }
 .movedown {
     margin-top: 10%;
@@ -546,11 +573,14 @@ ul {
 .moveright {
     margin-left: 14%;
 }
+.moveright2 {
+    margin-left: 51%
+}
 .moveleft {
     margin-left: 0%;
 }
 .moveleft2 {
-    margin-left: 44%;
+    margin-left: 37%;
 }
 .moveleft3 {
     margin-left: 74%;
@@ -595,7 +625,6 @@ ul {
         margin-left: 46.5% !important;
     }
 
-    
     .title {
         background: var(--main);
         position: static;
